--- a/example/storybook/src/components/Transitions/index.stories.mdx
+++ b/example/storybook/src/components/Transitions/index.stories.mdx
@@ -3,6 +3,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 <Meta title="components/Transitions" />
 
 import { Wrapper } from '../Wrapper';
+import { View, Pressable, Text as RNText, StyleSheet } from 'react-native';
+import { Fade } from '@universa11y/transitions';
+import { useState } from 'react';
 
 import {
   AppProvider,
@@ -11,9 +14,9 @@ import {
   Text,
 } from '@gluestack/design-system';
 
-# Button
+# Transitions
 
-A Button component is used to create clickable elements that perform an action when pressed.
+Transitions provides a declarative API to add entry and exit transitions.
 
 <AppProvider>
   <CodePreview
@@ -22,13 +25,39 @@ A Button component is used to create clickable elements that perform an action w
     metaData={{
       code: ` 
       function App () {
+  const [visibleFade, setVisibleFade] = useState(false);
         return (
           <Wrapper>
-       
+        <View>
+        <Pressable
+          onPress={() => {
+            setVisibleFade(!visibleFade);
+          }}
+        >
+          <RNText>Press me fade</RNText>
+        </Pressable>
+        <Fade
+          in={visibleFade}
+          style={StyleSheet.absoluteFill}
+          initial={{ opacity: 0 }}
+          animate={{ opacity: 1, transition: { duration: 200 } }}
+          exit={{ opacity: 0, transition: { duration: 100 } }}
+        >
+          <View
+            style={{
+              backgroundColor: 'pink',
+              width: 100,
+              height: 100,
+            }}
+          >
+            <RNText>Hello I am fade</RNText>
+          </View>
+        </Fade>
+      </View>
           </Wrapper>
     )
     }`,
-      scope: { Wrapper },
+      scope: { Wrapper, View, Pressable, RNText, StyleSheet, Fade, useState },
       argsType: {},
     }}
   />
@@ -36,317 +65,69 @@ A Button component is used to create clickable elements that perform an action w
 
 <br />
 
-## Features
-
-- Keyboard support for actions.
-- Support for hover, focus and active states.
-
 ## Installation
 
 ```jsx
-yarn add @universa11y/button
+yarn add @universa11y/transitions
 ```
 
 ## Usage
 
 ```jsx
-import { createButton } from '@universa11y/button';
-const Button = createButton({
-  Root,
-  Text,
-  Group,
-  GroupSpacer,
-  Spinner,
-});
-```
-
-These are the styled components that we need to pass in the creator API:
-
-### Root
-
-```jsx
-const Root = styled(
-  Pressable,
-  {
-    ...
-  },
-);
-```
-
-### Text
-
-```jsx
-import { styled } from '@dank-style/react';
-const Text = styled(
-  Text,
-  {
-    ...
-  },
-);
-```
-
-### Group
-
-```jsx
-import { styled } from '@dank-style/react';
-const Group = styled(
-  View,
-  {
-    ...
-  },
-);
-```
-
-### Spinner
-
-```jsx
-import { styled } from '@dank-style/react';
-const Spinner = styled(
-  ActivityIndicator,
-  {
-    ...
-  },
-);
-```
-
-### GroupSpacer
-
-```jsx
-import { styled } from '@dank-style/react';
-const GroupSpacer = styled(
-  View,
-  {
-    ...
-  },
-);
+import { Fade } from '@universa11y/transitions';
+<Fade
+  in={visibleFade}
+  style={StyleSheet.absoluteFill}
+  initial={{ opacity: 0 }}
+  animate={{ opacity: 1, transition: { duration: 200 } }}
+  exit={{ opacity: 0, transition: { duration: 100 } }}
+></Fade>;
 ```
 
 ## Anatomy
 
 ```jsx
-export default () => (
-  <Button.Group>
-    <Button>
-      <Button.Text />
-      <Button.Spinner />
-    </Button>
-  </Button.Group>
-);
+export default () => <Fade />;
 ```
 
 ## API Reference
 
-### Button
+### Fade or Slide or Stagger or PresenceTransition
 
-Contains all button related layout style props and actions.
-It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+```jsx
+interface ISupportedTransitions {
+  opacity?: number;
+  translateY?: number;
+  translateX?: number;
+  scale?: number;
+  scaleX?: number;
+  scaleY?: number;
+  rotate?: string;
+}
+```
 
-<AppProvider>
-  <Table>
-    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
-      <Table.TR>
-        <Table.TH>
-          <Text>Prop</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Type</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Default</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Description</Text>
-        </Table.TH>
-      </Table.TR>
-    </Table.THead>
-    <Table.TBody>
-      <Table.TR>
-        <Table.TD>
-          <Text>isLoading</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>When true, its loading state activates.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isHovered</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To manually set hover to the button.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isPressed</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To manually set pressable state to the button.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isFocused</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To manually set focused state to the button.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isDisabled</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To manually set disable to the button.</Text>
-        </Table.TD>
-      </Table.TR>
-    </Table.TBody>
-  </Table>
-</AppProvider>
-
-### Button.Text
-
-Contains all text related layout style props and actions.
-It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
-
-### Button.Group
-
-Contains all group related layout style props and actions.
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
-
-<AppProvider>
-  <Table>
-    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
-      <Table.TR>
-        <Table.TH>
-          <Text>Prop</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Type</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Default</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Description</Text>
-        </Table.TH>
-      </Table.TR>
-    </Table.THead>
-    <Table.TBody>
-      <Table.TR>
-        <Table.TD>
-          <Text>direction</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>'column' or 'row'</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>'row'</Text>
-        </Table.TD>
-        <Table.TD></Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isDisabled</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>
-            When true, This will disable all Table.THe buttons in a ButtonGroup
-          </Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isAttached</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>true</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>
-            When attached, all buttons will be attached to each other.
-          </Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>reversed</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To reverse the order of components</Text>
-        </Table.TD>
-      </Table.TR>
-    </Table.TBody>
-    <Table.TFoot>
-      <Table.TR>
-        <Table.TD>
-          <Text>reversed</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To reverse the order of components</Text>
-        </Table.TD>
-      </Table.TR>
-    </Table.TFoot>
-  </Table>
-</AppProvider>
-
-### Button.Spinner
-
-Contains all spinner related layout style props and actions.
-It inherits all the properties of React Native's [ActivityIndicator](https://reactnative.dev/docs/activityindicator#props) component.
-
-## Example
+```jsx
+interface ITransitionStyleProps extends ISupportedTransitions {
+  transition?: {
+    type?: 'timing' | 'spring',
+    easing?: (value: number) => number,
+    overshootClamping?: boolean,
+    restDisplacementThreshold?: number,
+    restSpeedThreshold?: number,
+    velocity?: number | { x: number, y: number },
+    bounciness?: number,
+    speed?: number,
+    tension?: number,
+    friction?: number,
+    stiffness?: number,
+    mass?: number,
+    damping?: number,
+    delay?: number,
+    duration?: number,
+    useNativeDriver?: boolean,
+  };
+}
+```
 
 <AppProvider>
   <CodePreview
@@ -355,32 +136,40 @@ It inherits all the properties of React Native's [ActivityIndicator](https://rea
     metaData={{
       code: ` 
       function App () {
+  const [visibleFade, setVisibleFade] = useState(false);
         return (
           <Wrapper>
-       
-        </Wrapper>
+        <View>
+        <Pressable
+          onPress={() => {
+            setVisibleFade(!visibleFade);
+          }}
+        >
+          <RNText>Press me fade</RNText>
+        </Pressable>
+        <Fade
+          in={visibleFade}
+          style={StyleSheet.absoluteFill}
+          initial={{ opacity: 0 }}
+          animate={{ opacity: 1, transition: { duration: 200 } }}
+          exit={{ opacity: 0, transition: { duration: 100 } }}
+        >
+          <View
+            style={{
+              backgroundColor: 'pink',
+              width: 100,
+              height: 100,
+            }}
+          >
+            <RNText>Hello I am fade</RNText>
+          </View>
+        </Fade>
+      </View>
+          </Wrapper>
     )
     }`,
-      scope: { Wrapper },
+      scope: { Wrapper, View, Pressable, RNText, StyleSheet, Fade, useState },
       argsType: {},
     }}
   />
 </AppProvider>
-
-## Accessibility
-
-### Keyboard
-
-- Tab: Moves focus to the next focusable element.
-- `Shift + Tab`: Moves focus to the previous focusable element.
-- Enter: Triggers the button's action.
-
-### Screen Reader
-
-- VoiceOver: When the button is focused, the screen reader will announce the button's label and its current state.
-
-## Dependencies
-
-- `@universa11y/utils`
-- `@react-native-aria/focus`
-- `react-native-svg`
